			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01aw: *********************************

BUG: (12/15/04, GVG) DRC and new thick active layers: wrong bit detection for thick active layers that make DRC to fail
FIX: negate condition in Quick.checkDist() (Bug #117)

IMP: (12/15/04, GVG) MoCMOS: wrong min size of thick active pure nodes (2.0 instead of 4.0, rule 24.1)

IMP: (12/15/04, GVG) TSMC90: new stipple patterns for OD18 (Bug #118)

BUG: (12/15/04, GVG) DRC Select checking: still problems with transformation (Bug #114)
FIX: "No enough surround" code refactored and placed outside of initial recursive iteration.

IMP: (12/14/04, GVG) New colors/patterns for VTH/VTL/Native transistors in TSMC90 (Bug #113)

IMP: (12/14/04, GVG) DRC: first modifications for VTH/VTL/Native transistors.

BUG: (12/14/04, SMR) Duplicating a PMOS schematic transistor creates one named "nmos@xx" (Bug #115)
FIX: In Clipboard.copyListToCell(), create nodes with the proper "tech specific" value.

BUG: (12/14/04, SMR) Spice netlister does not use "vdd" or "gnd" when power and ground nodes are present (Bug #112).
FIX: In Spice.getPowerName and getGroundName(), favor "vdd" and "gnd" if the names exist.

BUG: (12/14/04, SMR) When the background color is white, dragging a rectangle is not visible (Bug #110).
FIX: In EditWindow.showDragBox(), use the proper highlight color.

BUG: (12/14/04, DN) Non-string variables with language code bits can corrupt disk library (Bug #100).
FIX: Clear language code bits from non-string variables in ELIB and JELIB writers.

************************* Version 8.01av: *********************************

IMP: (12/14/04, DN) Renamed transistor port names in TSMC90. JELIB reader handles renamed ports. (Bug #83)

BUG: (12/13/04, SMR) Spice cards do not get emitted to the deck (Bug #93).
FIX: In Spice.replacePortsAndVars(), allow unconnected nodes.
